syntax = "proto3";

package order;
option java_multiple_files = true; 
option java_package = "org.bazarteer.orderservice.proto";

service OrderService {
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
  string custumerId = 1;
  string sellerId = 2;
  string custumerLocation = 3;
  string productLocation = 4;
  double finalPrice = 5;
  int32 productId = 6;
}

message PlaceOrderResponse {
  int32 orderId = 1;
}
